--- a/src/main/webapp/WEB-INF/view/user.html
+++ b/src/main/webapp/WEB-INF/view/user.html
@@ -24,9 +24,9 @@
     <tr>
         <th th:width="50">UserId</th>
         <th th:width="120">Name</th>
-        <th th:width="120">Surname</th>
+        <th th:width="120">Country</th>
         <th th:width="50">Age</th>
-        <th th:width="150">Email</th>
+
     </tr>
     <td th:utext="${user.getId()}">UserId</td>
     <td th:utext="${user.getName()}">Name</td>
